# gfxtk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: ConfigureBackends.cmake  GenerateGitInfoHeader.cmake  GitInfo.cmake  Shaders.cmake
cmake/assets/: shader_empty.cpp.in
examples/00-triangle/: CMakeLists.txt  Vertex.hpp  triangle.cpp
examples/01-uniform-buffers/: CMakeLists.txt  Vertex.hpp  uniform_buffers.cpp
examples/02-textures/: CMakeLists.txt  UniformBufferObject.hpp  Vertex.hpp  textures.cpp
libs/gfxtk_core/: CMakeLists.txt
libs/gfxtk_core/src/gfxtk/: AccessFlags.cpp  AccessFlags.hpp  BindGroupLayoutDescriptor.cpp  BindGroupLayoutDescriptor.hpp  BindGroupLayoutEntry.cpp  BindGroupLayoutEntry.hpp  BindingLayoutType.cpp  BindingLayoutType.hpp  BindingType.cpp  BindingType.hpp  BlendFactor.cpp  BlendFactor.hpp  BlendOp.cpp  BlendOp.hpp  BufferBindingLayout.cpp  BufferBindingLayout.hpp  BufferUsageFlags.cpp  BufferUsageFlags.hpp  ClearColorValue.cpp  ClearColorValue.hpp  ClearDepthStencilValue.cpp  ClearDepthStencilValue.hpp  ColorSpace.hpp  ColorWriteMask.cpp  ColorWriteMask.hpp  CombinedTextureSamplerBindingType.cpp  CombinedTextureSamplerBindingType.hpp  CompareOp.cpp  CompareOp.hpp  CullMode.cpp  CullMode.hpp  DepthClipMode.cpp  DepthClipMode.hpp  DeviceInfo.cpp  DeviceInfo.hpp  DeviceType.cpp  DeviceType.hpp  Extent2D.cpp  Extent2D.hpp  Extent3D.cpp  (+113 more)
libs/gfxtk_glfw/: CMakeLists.txt
libs/gfxtk_glfw/src/gfxtk/backend/glfw/: Window.cpp  Window.hpp
libs/gfxtk_logging/: CMakeLists.txt
libs/gfxtk_logging/src/gfxtk/: .gitignore  log.cpp  log.hpp
libs/gfxtk_vulkan/: CMakeLists.txt
libs/gfxtk_vulkan/src/gfxtk/backend/vulkan/: AccessFlags.cpp  AccessFlags.hpp  BindGroup.cpp  BindGroup.hpp  BindGroupEntry.cpp  BindGroupEntry.hpp  BindGroupLayout.cpp  BindGroupLayout.hpp  BindGroupLayoutEntry.cpp  BindGroupLayoutEntry.hpp  BlendFactor.cpp  BlendFactor.hpp  BlendOp.cpp  BlendOp.hpp  Buffer.cpp  Buffer.hpp  BufferUsageFlags.cpp  BufferUsageFlags.hpp  ColorSpace.cpp  ColorSpace.hpp  ColorWriteMask.cpp  ColorWriteMask.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandEncoder.cpp  CommandEncoder.hpp  CommandQueue.cpp  CommandQueue.hpp  CompareOp.cpp  CompareOp.hpp  CullMode.cpp  CullMode.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  Framebuffer.hpp  IndexType.cpp  IndexType.hpp  Instance.cpp  (+63 more)
src/: main.cpp
src/gfxtk/: BindGroup.cpp  BindGroup.hpp  BindGroupEntry.cpp  BindGroupEntry.hpp  BindGroupLayout.cpp  BindGroupLayout.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandEncoder.cpp  CommandEncoder.hpp  CommandQueue.cpp  CommandQueue.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  ImageCopyBuffer.cpp  ImageCopyBuffer.hpp  ImageCopyTexture.cpp  ImageCopyTexture.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  RenderPassAttachment.cpp  RenderPassAttachment.hpp  RenderPassEncoder.cpp  RenderPassEncoder.hpp  RenderPipelineDescriptor.cpp  RenderPipelineDescriptor.hpp  Sampler.cpp  Sampler.hpp  Semaphore.cpp  Semaphore.hpp  (+15 more)
