cmake_minimum_required(VERSION 3.20)
project(gfxtk_core)

set(CMAKE_CXX_STANDARD 17)

add_library(gfxtk_core STATIC
        src/gfxtk/BindGroupLayoutDescriptor.cpp
        src/gfxtk/BindGroupLayoutDescriptor.hpp
        src/gfxtk/BindGroupLayoutEntry.cpp
        src/gfxtk/BindGroupLayoutEntry.hpp
        src/gfxtk/BindingLayoutType.cpp
        src/gfxtk/BindingLayoutType.hpp
        src/gfxtk/BlendFactor.cpp
        src/gfxtk/BlendFactor.hpp
        src/gfxtk/BlendOp.cpp
        src/gfxtk/BlendOp.hpp
        src/gfxtk/BufferBindingLayout.cpp
        src/gfxtk/BufferBindingLayout.hpp
        src/gfxtk/BufferUsageFlags.cpp
        src/gfxtk/BufferUsageFlags.hpp
        src/gfxtk/ClearColorValue.cpp
        src/gfxtk/ClearColorValue.hpp
        src/gfxtk/ClearDepthStencilValue.cpp
        src/gfxtk/ClearDepthStencilValue.hpp
        src/gfxtk/ColorSpace.cpp
        src/gfxtk/ColorSpace.hpp
        src/gfxtk/ColorWriteMask.cpp
        src/gfxtk/ColorWriteMask.hpp
        src/gfxtk/CompareOp.cpp
        src/gfxtk/CompareOp.hpp
        src/gfxtk/RenderPassAttachmentDescriptor.cpp
        src/gfxtk/RenderPassAttachmentDescriptor.hpp
        src/gfxtk/CullMode.cpp
        src/gfxtk/CullMode.hpp
        src/gfxtk/DepthClipMode.cpp
        src/gfxtk/DepthClipMode.hpp
        src/gfxtk/DeviceInfo.cpp
        src/gfxtk/DeviceInfo.hpp
        src/gfxtk/DeviceType.cpp
        src/gfxtk/DeviceType.hpp
        src/gfxtk/Extent2D.cpp
        src/gfxtk/Extent2D.hpp
        src/gfxtk/Extent3D.cpp
        src/gfxtk/Extent3D.hpp
        src/gfxtk/FramebufferErrors.cpp
        src/gfxtk/FramebufferErrors.hpp
        src/gfxtk/gfxtk_internal.hpp
        src/gfxtk/IndexType.cpp
        src/gfxtk/IndexType.hpp
        src/gfxtk/InstanceDescriptor.cpp
        src/gfxtk/InstanceDescriptor.hpp
        src/gfxtk/LoadOp.cpp
        src/gfxtk/LoadOp.hpp
        src/gfxtk/make_flags.hpp
        src/gfxtk/MemoryUsage.cpp
        src/gfxtk/MemoryUsage.hpp
        src/gfxtk/microsoft_fix.hpp
        src/gfxtk/Offset2D.cpp
        src/gfxtk/Offset2D.hpp
        src/gfxtk/Offset3D.cpp
        src/gfxtk/Offset3D.hpp
        src/gfxtk/Origin3D.cpp
        src/gfxtk/Origin3D.hpp
        src/gfxtk/PipelineColorBlendAttachmentDescriptor.cpp
        src/gfxtk/PipelineColorBlendAttachmentDescriptor.hpp
        src/gfxtk/PipelineDepthBiasStateDescriptor.cpp
        src/gfxtk/PipelineDepthBiasStateDescriptor.hpp
        src/gfxtk/PipelineDepthStencilStateDescriptor.cpp
        src/gfxtk/PipelineDepthStencilStateDescriptor.hpp
        src/gfxtk/PipelineMultisampleStateDescriptor.cpp
        src/gfxtk/PipelineMultisampleStateDescriptor.hpp
        src/gfxtk/PipelineRasterizationStateDescriptor.cpp
        src/gfxtk/PipelineRasterizationStateDescriptor.hpp
        src/gfxtk/PipelineStage.cpp
        src/gfxtk/PipelineStage.hpp
        src/gfxtk/PipelineVertexInputStateDescriptor.cpp
        src/gfxtk/PipelineVertexInputStateDescriptor.hpp
        src/gfxtk/PipelineViewportStateDescriptor.cpp
        src/gfxtk/PipelineViewportStateDescriptor.hpp
        src/gfxtk/PixelFormat.cpp
        src/gfxtk/PixelFormat.hpp
        src/gfxtk/PresentationErrors.cpp
        src/gfxtk/PresentationErrors.hpp
        src/gfxtk/PrimitiveTopology.cpp
        src/gfxtk/PrimitiveTopology.hpp
        src/gfxtk/QueueFamily.cpp
        src/gfxtk/QueueFamily.hpp
        src/gfxtk/QueueFlags.cpp
        src/gfxtk/QueueFlags.hpp
        src/gfxtk/Rect2D.cpp
        src/gfxtk/Rect2D.hpp
        src/gfxtk/RenderPassColorAttachment.cpp
        src/gfxtk/RenderPassColorAttachment.hpp
        src/gfxtk/RenderPassDepthStencilAttachment.cpp
        src/gfxtk/RenderPassDepthStencilAttachment.hpp
        src/gfxtk/SampleCount.cpp
        src/gfxtk/SampleCount.hpp
        src/gfxtk/SamplerBindingLayout.cpp
        src/gfxtk/SamplerBindingLayout.hpp
        src/gfxtk/ShaderStageFlags.cpp
        src/gfxtk/ShaderStageFlags.hpp
        src/gfxtk/StencilDescriptor.cpp
        src/gfxtk/StencilDescriptor.hpp
        src/gfxtk/StencilOp.cpp
        src/gfxtk/StencilOp.hpp
        src/gfxtk/StorageTextureBindingLayout.cpp
        src/gfxtk/StorageTextureBindingLayout.hpp
        src/gfxtk/StoreOp.cpp
        src/gfxtk/StoreOp.hpp
        src/gfxtk/TextureAspect.cpp
        src/gfxtk/TextureAspect.hpp
        src/gfxtk/TextureBindingLayout.cpp
        src/gfxtk/TextureBindingLayout.hpp
        src/gfxtk/TextureLayout.cpp
        src/gfxtk/TextureLayout.hpp
        src/gfxtk/TextureType.cpp
        src/gfxtk/TextureType.hpp
        src/gfxtk/TextureViewType.cpp
        src/gfxtk/TextureViewType.hpp
        src/gfxtk/TriangleFillMode.cpp
        src/gfxtk/TriangleFillMode.hpp
        src/gfxtk/Version.cpp
        src/gfxtk/Version.hpp
        src/gfxtk/VertexAttribute.cpp
        src/gfxtk/VertexAttribute.hpp
        src/gfxtk/VertexBufferLayout.cpp
        src/gfxtk/VertexBufferLayout.hpp
        src/gfxtk/VertexFormat.cpp
        src/gfxtk/VertexFormat.hpp
        src/gfxtk/VertexStepFunction.cpp
        src/gfxtk/VertexStepFunction.hpp
        src/gfxtk/Viewport.cpp
        src/gfxtk/Viewport.hpp
        src/gfxtk/Winding.cpp
        src/gfxtk/Winding.hpp
        src/gfxtk/BindingType.cpp src/gfxtk/BindingType.hpp)

target_include_directories(gfxtk_core INTERFACE src)
target_compile_definitions(gfxtk_core PRIVATE GFXTK_BUILD_LIBRARY=1)
